--- a/setup.yml
+++ b/setup.yml
@@ -1,13 +1,16 @@
 ---
 - hosts: 127.0.0.1
+  vars_files:
+    - vars/general.yml
   tasks:
   - include: tasks/basics.yml
+  - include: tasks/zsh.yml
   #- include: tasks/git.yml
   # languages
-  - include: tasks/lang/go.yml
-  - include: tasks/lang/java.yml
-  - include: tasks/lang/javascript.yml
-  - include: tasks/lang/python.yml
-  - include: tasks/lang/ruby.yml
+  # - include: tasks/lang/go.yml
+  # - include: tasks/lang/java.yml
+  # - include: tasks/lang/javascript.yml
+  # - include: tasks/lang/python.yml
+  # - include: tasks/lang/ruby.yml
   # desktop apps
-  - include: tasks/apps/atom.yml
+  # - include: tasks/apps/atom.yml
