--- a/tasks/basics.yml
+++ b/tasks/basics.yml
@@ -13,6 +13,16 @@
   - wget
   - zip
   - zlib1g-dev
+  - zsh
+
+- name: setup user
+  become: true
+  user:
+    name: rossedman
+    shell: /bin/zsh
+    generate_ssh_key: yes
+    ssh_key_bits: 2048
+    ssh_key_file: .ssh/id_rsa
 
 # TODO: create ~/Code folder
 # TODO: clone github projects into Code folder
