Reset lang and apps

--- a/setup.yml
+++ b/setup.yml
@@ -6,11 +6,13 @@
   - include: tasks/basics.yml
   - include: tasks/zsh.yml
   #- include: tasks/git.yml
+
   # languages
-  # - include: tasks/lang/go.yml
-  # - include: tasks/lang/java.yml
-  # - include: tasks/lang/javascript.yml
-  # - include: tasks/lang/python.yml
-  # - include: tasks/lang/ruby.yml
+  - include: tasks/lang/go.yml
+  - include: tasks/lang/java.yml
+  - include: tasks/lang/javascript.yml
+  - include: tasks/lang/python.yml
+  - include: tasks/lang/ruby.yml
+  
   # desktop apps
-  # - include: tasks/apps/atom.yml
+  - include: tasks/apps/atom.yml
