--- a/tasks/git.yml
+++ b/tasks/git.yml
@@ -1,1 +1,12 @@
 ---
+- name: set git email
+  git_config:
+    name: user.email
+    scope: global
+    value: "{{git_email}}"
+
+- name: set git name
+  git_config:
+    name: user.name
+    scope: global
+    value: "{{git_name}}"
