--- a/tasks/git.yml
+++ b/tasks/git.yml
@@ -10,3 +10,9 @@
     name: user.name
     scope: global
     value: "{{git_name}}"
+
+- name: set git push
+  git_config:
+    name: push.default
+    scope: global
+    value: simple
