--- a/tasks/tools/azurecli.yml
+++ b/tasks/tools/azurecli.yml
@@ -8,14 +8,12 @@
 - name: add azurecli key repo
   become: true
   apt_key: keyserver="apt-mo.trafficmanager.net" id=417A0893
+  notify:
+  - apt cache update
 
 - name: install dependencies
   become: true
   apt: name=apt-transport-https
-
-- name: apt update cache
-  become: true
-  apt: update_cache=true
 
 - name: install azurecli
   become: true
