Change 'become' to root / Update permissions

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,3 @@
 ---
-# - src: angstwad.docker_ubuntu
-# - src: geerlingguy.java
+- src: angstwad.docker_ubuntu
 - src: jgkim.atom
-# - src: nickhammond.logrotate
