--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -1,11 +1,14 @@
 ---
-- name: clone oh-my-zsh
-  git:
-    repo: https://github.com/robbyrussell/oh-my-zsh.git
-    dest: /home/{{ansible_user_id}}/.oh-my-zsh
-    depth: 1
+- block:
+  - name: clone oh-my-zsh
+    git:
+      repo: https://github.com/robbyrussell/oh-my-zsh.git
+      dest: /home/{{ansible_user_id}}/.oh-my-zsh
+      depth: 1
 
-- name: install zshrc
-  template:
-    src: zshrc.j2
-    dest: /home/{{ansible_user_id}}/.zshrc
+  - name: install zshrc
+    template:
+      src: zshrc.j2
+      dest: /home/{{ansible_user_id}}/.zshrc
+      
+  become_user: "{{ansible_user_id}}"
